--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@chakra-ui/react": "^1.6.3",
     "@emotion/react": "11",
     "@emotion/styled": "11",
+    "@reduxjs/toolkit": "^1.6.0",
     "framer-motion": "4",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.4"
   }
 }
